<resources>
    <string name="app_name">Beauty Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_out">Logout</string>
    <string name="brand">Brand Name:</string>
    <string name="price">Price</string>
    <string name="buy_from_website">Buy From Website</string>
    <string name="colors">Colors</string>
    <string name="rating">Rating</string>
    <string name="name">Name</string>
    <string name="place_order">Place Order</string>
    <string name="add_to_cart_button">Add to cart</string>
    <string name="face">Face</string>
    <string name="checkout_text">Your order has been recieved! \n Thank You!</string>
    <string name="empty_wishlist">your wishlist is empty. \n 💌 add products to your wishlist.</string>
    <string name="empty">your bag is empty. \n 💌 add products to your shopping bag.</string>
    <string name="required">required</string>
    <string name="order_details">order details</string>
    <string name="Website"><u>Brand Website</u></string>
    <string name="null_price">10$</string>

    <string-array name="rangeSliderValues">
        <item>0</item>
        <item>100</item>
    </string-array>


</resources>